<resources>
    <string name="app_name">SGM</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="roboto_regular">sans-serif</string>
    <string name="roboto_light">sans-serif-light</string>
    <string name="roboto_condensed">sans-serif-condensed</string>
    <string name="roboto_thin">sans-serif-thin</string>
    <string name="roboto_medium">sans-serif-medium</string>
    <string name="service_error_unknown">Ups, ocurrio un error inesperado. Estamos en busca de una rápida solución</string>
    <string name="service_error_services_unavailable">Ups, el sistema no esta operativo en este momento. Estamos en busca de una rápida solución.</string>
    <string name="service_error_services_timeout">Ups, esto esta demorando mas de lo esperado. Prueba nuevamente luego.</string>
    <string name="service_error_no_connection">Ups, no pudimos conectarnos con internet. Chequea que tienes una conexión activa y vuelve a intentarlo.</string>
    <string name="service_error_network_unavailable">Ups, no pudimos conectarnos con internet. Checkea que tienes una conexión activa y vuelve a intentarlo.</string>
    <string name="menu_cancelar">Cancelar</string>
    <string name="menu_guardar">Guardar</string>
    <string name="menu_asignqr">Asignar QR</string>
    <string name="menu_readqr">Leer QR</string>
    <string name="menu_search">Buscar</string>
    <string name="menu_iniciar_visita">Iniciar Visita</string>
    <string name="menu_report_gen">Generar Reporte</string>
    <string name="menu_visita_finalizar">Finalizar Visita</string>
    <string name="menu_show_pdf">Ver PDF</string>
    <string name="menu_send_email">Enviar correo</string>
    <string name="menu_update">Actualizar</string>
    <string name="menu_exit">Salir</string>
    <string name="btn_aceptar">Aceptar</string>
    <string name="btn_cancelar">Cancelar</string>
    <string name="btn_login">INGRESAR</string>
    <string name="btn_stop">PARAR</string>
    <string name="btn_init">INICIAR</string>
    <string name="btn_camera">Camara</string>
    <string name="btn_gallery">Galería</string>
    <string name="btn_continue">Continuar</string>
    <string name="btn_try_again">Probar de nuevo</string>
    <string name="btn_agregar">Agregar</string>
    <string name="btn_limpiar">Limpiar</string>
    <string name="btn_read_qr">Leer QR</string>
    <string name="btn_comentarios">Comentarios</string>
    <string name="btn_corregidos">Reparaciones</string>
    <string name="btn_pendientes">Pendientes</string>
    <string name="btn_corregir_activo">Corregir Activo</string>
    <string name="radio_opt_si">Si</string>
    <string name="radio_opt_no">No</string>
    <string name="radio_opt_na">N/A</string>
    <string name="radio_opt_b">B</string>
    <string name="radio_opt_c">R</string>
    <string name="radio_opt_p">P</string>
    <string name="app_count_cantidad">Cantidad  %2d</string>
    <string name="login_prompt_usuario">Usuario</string>
    <string name="login_prompt_password">Contraseña</string>
    <string name="login_error_invalid_email">El usuario es inválido.</string>
    <string name="login_error_incorrect_password">La contraseña es inválida.</string>
    <string name="login_error_empty_user">Ingresa el usuario.</string>
    <string name="login_error_empty_pass">Ingresa la contraseña.</string>
    <string-array name="array_roles">
        <item>No definido</item>
        <item>Admnistrador</item>
        <item>Administrativo</item>
        <item>Técnico</item>
        <item>Contacto Empresa</item>
        <item>Encargado de Mantenimiento</item>
    </string-array>
    <string name="preventivos_ab_title">Preventivos</string>
    <string name="home_msg_visitas_asignadas_empty">Actualmente no tienes visitas asignadas.</string>
    <string name="home_estacion_header_estacion">Estación</string>
    <string name="home_estacion_header_zona">Zona</string>
    <string name="home_estacion_header_last_visita">Última visita</string>
    <string name="home_estacion_header_next_visita">Próxima visita</string>
    <string name="home_estacion_header_dias_sin_visita">Días sin visita</string>
    <string name="home_estacion_header_estado">Estado</string>
    <string name="visita_estacion_planificada">Planificada: %1$s</string>
    <string name="visita_lbl_init">Inicio Visita</string>
    <string name="visita_lbl_end">Fin de Visita</string>
    <string name="visita_lbl_sign">Firma por E.S.</string>
    <string name="visita_activos_select_activo">Asociar QR al activo</string>
    <string name="visita_activos_title">Activos</string>
    <string name="visita_activos_code">Código QR: %1$s</string>
    <string name="visita_activos_code_empty">Sin código QR</string>
    <string name="visita_exit_unsaved_msg">Desea salir sin guardar los datos del chequeo?</string>
    <string name="visita_date_seleccionar_init">Seleccionar fecha …</string>
    <string name="visita_date_seleccionar_end">Seleccionar fecha …</string>
    <string name="visita_sign_lbl_comment">Comentario del Operador</string>
    <string name="visita_sign_lbl_enter_comment">Ingrese un comentario</string>
    <string name="visita_msg_qr_must_int">EL código deber ser un número. \nCódigo leido: %1$s</string>
    <string name="visita_msg_readed_code">Código leido: %1$s</string>
    <string name="visita_msg_must_init">Para modificar un activo debes iniciar la visita.</string>
    <string name="visita_msg_status_finish">La visita se encuentra finalizada.</string>
    <string name="visita_msg_saved">La visita fue guardada correctamente.</string>
    <string name="visita_msg_finished">La visita fue finalizada correctamente.</string>
    <string name="visita_msg_fin_must_after_init">La fecha de fin debe ser posterior a la fecha de inicio.</string>
    <string name="visita_msg_finalizar_select_end_data">Debes seleccionar una fecha de fin para finalizar la visita.</string>
    <string name="visita_msg_finalizar_confirmacion">Estas seguro que deseas finalizar la visita?</string>
    <string name="visita_msg_visita_finalizada">Visita finalizada</string>
    <string name="visita_msg_activo_no_encontrado">Activo no encontrado.</string>
    <string name="visita_activo_status_completo">COMPLETO</string>
    <string name="visita_activo_status_iniciado">INICIADO</string>
    <string name="visita_activo_status_sininciar">SIN INICIAR</string>
    <string name="visita_emails_title">Seguro que desea cerrar la visita?</string>
    <string name="visita_emails_subtitle">Se notificará a las siguientes direcciones.</string>
    <string name="visita_emails_inputs_hint">ejemplo@mail.com</string>
    <string name="visita_emails_invalid_mail">Email inválido</string>
    <string name="activo_tab_chequeo">CHEQUEO</string>
    <string name="surtidor_chequeo_exit_unsaved_msg">Desea salir sin guardar los datos del chequeo?</string>
    <string name="surtidor_chequeo_saved_successful">Surtidor guardado correctamente.</string>
    <string name="surtidor_chequeo_btn_mangueras">Mangueras</string>
    <string name="surtidor_chequeo_btn_productos">Productos</string>
    <string name="surtidor_chequeo_plan_sellado">Plan Sellado</string>
    <string name="surtidor_chequeo_other">Otros</string>
    <string name="tanque_chequeo_color_marco_tapa_descarga">Color de marco y tapa en descarga</string>
    <string name="tanque_chequeo_agua_tanque">Agua en el tanque</string>
    <string name="tanque_chequeo_ventilacion">Ventilación</string>
    <string name="tanque_chequeo_lomo_descargas_telemedicion">Tapas sobre lomo de tanque, descargas, telemedición</string>
    <string name="tanque_chequeo_tipo_descarga">Tipo de descarga</string>
    <string name="tanque_chequeo_medida_agua">Medida del agua (cm)</string>
    <string name="tanque_chequeo_exit_unsaved_msg">Desea salir sin guardar los datos del chequeo?</string>
    <string name="tanque_chequeo_saved_successful">Tanque guardado correctamente.</string>
    <string name="bomba_chequeo_fugas_sump">Fugas dentro del sump</string>
    <string name="bomba_chequeo_hermetico">Sump hermético</string>
    <string name="bomba_chequeo_detector_fuga">Detector mecánico de fuga</string>
    <string name="bomba_chequeo_sifon">Sifón</string>
    <string name="bomba_chequeo_otros">Otros</string>
    <string name="bomba_chequeo_exit_unsaved_msg">Desea salir sin guardar los datos del chequeo?</string>
    <string name="bomba_chequeo_saved_successful">Bomba guardada correctamente.</string>
    <string name="generico_chequeo_saved_successful">Activo guardado correctamente.</string>
    <string name="mangueras_ab_title">Mangueras</string>
    <string name="mangueras_list_empty">Ninguna manguera del surtidor tiene un producto asignado.</string>
    <string name="mangueras_subtitle_caudal">CAUDAL</string>
    <string name="mangueras_subtitle_calibre_precinto">CALIBRE Y PRECINTO</string>
    <string name="mangueras_field_totalizador_mecanico_inicial">Totalizador mecánico incial (l)</string>
    <string name="mangueras_field_totalizador_mecanico_final">Totalizador mecánico final (l)</string>
    <string name="mangueras_field_totalizador_electro_inicial">Totalizador electrónico inicial (l)</string>
    <string name="mangueras_field_totalizador_electro_final">Totalizador electrónico final (l)</string>
    <string name="mangueras_field_volumen_retirado">Volumen retirado (l) :</string>
    <string name="mangueras_field_volumen">Volumen (l)</string>
    <string name="mangueras_field_tiempo">Tiempo (s)</string>
    <string name="mangueras_field_volumen_retirado2">Litros / Minuto</string>
    <string name="mangueras_field_calibre1">Calibre 1</string>
    <string name="mangueras_field_calibre2">Calibre 2</string>
    <string name="mangueras_field_calibre3">Calibre 3</string>
    <string name="mangueras_field_calibre4">Calibre 4</string>
    <string name="mangueras_field_calibre5">Calibre 5</string>
    <string name="mangueras_field_calibre6">Calibre 6</string>
    <string name="mangueras_field_calibre_alto">Calibre Alto:</string>
    <string name="mangueras_field_calibre_bajo">Calibre Bajo:</string>
    <string name="mangueras_field_precinto_remplazo">Precinto: Reemplazado</string>
    <string name="mangueras_list_tipo_combustible">Tipo de Combustible</string>
    <string name="mangueras_list_lbl_number">Número:</string>
    <string name="corregidos_detail_manguera_lbl_type">Tipo de Combustible</string>
    <string name="pendientes_prompt_select_plazo">Seleccione una fecha</string>
    <string name="pendientes_detail_lbl_comment">Comentario</string>
    <string name="pendientes_detail_lbl_enter_comment">Ingrese su comentario</string>
    <string name="pendientes_detail_lbl_visible">Visible</string>
    <string name="pendientes_detail_lbl_plazo">Plazo:</string>
    <string name="pendientes_detail_destino_cargo_lbl">Destinatario</string>
    <string name="pendientes_detail_destino_cargo_hint">Selecciona un destinatario …</string>
    <string name="pendientes_detail_lbl_enter_photo">Seleccione una foto</string>
    <string name="pendientes_chequeo_lbl">Chequeo</string>
    <string name="pendientes_chequeo_hint">Selecciona un chequeo</string>
    <string name="preview_lbl">Lbl</string>
    <string name="preview_opt0">opt0</string>
    <string name="preview_opt1">opt1</string>
    <string name="preview_opt2">opt2</string>
    <string name="preview_opt3">opt3</string>
    <string name="preview_index">12</string>
    <string name="preview_picos_type">Super 95</string>
    <string name="preview_estacion_name">Estacion Name</string>
    <string name="preview_estacion_zone">Zona 3</string>
    <string name="preview_estc_last_visita">Ultima visita: dd/MM/YY</string>
    <string name="preview_estc_next_visita">Proxima Visita: dd/MM/YY</string>
    <string name="preview_estc_dias_sin_visita">Dias sin visitar: 4</string>
    <string name="preview_estc_estado">PENDIENTE</string>
    <string name="preview_pico_type">Super 95</string>
    <string name="preview_mangueras_num">19</string>
</resources>