<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:minHeight="48dp"
    android:paddingBottom="8dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="8dp">

    <TextView
        android:id="@+id/vIndex"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:fontFamily="@string/roboto_thin"
        android:text="@string/preview_index"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="32dp" />

    <TextView
        android:id="@+id/vTypeLbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginLeft="16dp"
        android:layout_toEndOf="@+id/vIndex"
        android:layout_toRightOf="@+id/vIndex"
        android:text="@string/corregidos_detail_manguera_lbl_type"
        android:fontFamily="@string/roboto_regular"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/vType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginLeft="8dp"
        android:layout_toEndOf="@+id/vTypeLbl"
        android:layout_toRightOf="@+id/vTypeLbl"
        android:text="@string/preview_picos_type"
        android:fontFamily="@string/roboto_regular"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textStyle="bold" />


</RelativeLayout>
