<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/vLbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:layout_toLeftOf="@+id/group"
        android:layout_toStartOf="@+id/group"
        android:fontFamily="@string/roboto_light"
        android:text="@string/preview_lbl"
        android:textAppearance="?android:attr/textAppearanceMedium"/>

    <LinearLayout
        android:layout_marginRight="32dp"
        android:id="@+id/group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toLeftOf="@+id/vBtnCommentsBox"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radioButton0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="48dp"
            android:text="@string/preview_opt0"/>

        <RadioButton
            android:id="@+id/radioButton1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="48dp"
            android:text="@string/preview_opt1"/>

        <CheckBox
            android:id="@+id/checkbox2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="48dp"
            android:checked="false"
            android:text="@string/preview_opt2"/>

        <RadioButton
            android:id="@+id/radioButton3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="48dp"
            android:text="@string/preview_opt3"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/vBtnCommentsBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:gravity="right"
        android:orientation="horizontal"
        android:padding="16dp">

        <ImageButton
            android:id="@+id/vBtnComments"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="right"
            android:background="@drawable/raised_btn"
            android:src="@drawable/ic_comment_black_24dp"
            android:tint="@color/white"/>

    </LinearLayout>

</RelativeLayout>




