<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.bilpa.android.HomeActivity">

    <item android:id="@+id/vMenuSearch"
        android:title="@string/menu_search"
        android:icon="@drawable/ic_search_white_24dp"
        app:showAsAction="collapseActionView|ifRoom"
        app:actionViewClass="android.support.v7.widget.SearchView"/>

    <item android:id="@+id/vMenuUpdate"
        android:title="@string/menu_update"
        android:icon="@drawable/ic_refresh_white_24dp"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/vMenuExit"
        android:title="@string/menu_exit"
        android:icon="@drawable/ic_exit_to_app_white_24dp"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/vMenuUser"
        android:title="Usuario (ROL)"
        app:showAsAction="always" />

</menu>
